<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/text_view_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="なし"
            />

        <Button
            android:id="@+id/button_get_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_token"
            app:layout_constraintTop_toBottomOf="@+id/text_view_token"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/button_remove_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_token"
            app:layout_constraintTop_toBottomOf="@+id/button_get_token"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <EditText
            android:id="@+id/edit_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/frame"
            android:hint="title"
            app:layout_constraintTop_toBottomOf="@+id/button_remove_token"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <EditText
            android:id="@+id/edit_text_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/frame"
            android:hint="body"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <RadioGroup
            android:id="@+id/radio_group_improtance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@+id/radio_high"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_body"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <RadioButton android:id="@+id/radio_high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high"/>
            <RadioButton android:id="@+id/radio_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal"/>
            <RadioButton android:id="@+id/radio_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low"/>
        </RadioGroup>

        <Button
            android:id="@+id/button_send_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_notification"
            app:layout_constraintTop_toBottomOf="@+id/radio_group_improtance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>